add my edited header section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </head>
 <body>
-     <header class="max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 py-5 my-10"> 
+     <header class="md:container md:mx-auto  my-10"> 
 
         <div class="navbar bg-[#F85559] rounded-[600px]">
 
