add my edited deal section

--- a/index.html
+++ b/index.html
@@ -44,12 +44,72 @@
   </head>
 
   <div class="modal" id="modal-1">
-    <div class="modal-box">
-      <h3 class="font-bold text-lg">Hello!</h3>
-      <p class="py-4">This modal works with anchor links</p>
-      <div class="modal-action">
-       <a href="#card-1" class="btn">Buy Now</a>
-       <a href="#card-1" class="btn">close</a>
+    <div class="modal-box w-3/4 md:w-[300px] md:[400px] lg:w-[400px] lg:h-[400px]">
+
+      <div class="flex justify-center py-3">
+        <img class="" src="./images/fruit6.png" alt="" srcset="">
+      </div>
+      <h3 class="font-extrabold text-lg lg:text-xl flex justify-center">Orange</h3>
+      <p class="py-4 text-xs flex justify-center text-center">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+      <div class="rating rating-md rating-half flex justify-center">
+        <input type="radio" name="rating-10" class="rating-hidden" />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+          checked
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+      </div>
+
+      <div class="modal-action flex justify-center">
+       <a href="#card-1" class="btn  btn-error rounded text-[#F85559] bg-white">Close</a>
+       <a href="#card-1" class="btn  btn-error rounded bg-[#F85559] border-none text-white">Buy Now</a>
       </div>
     </div>
   </div>
@@ -57,7 +117,7 @@
   <body class="font-lato">
     <header class="md:container md:mx-auto mx-3 my-10">
       <div
-        class="navbar bg-[#F85559] rounded-full flex justify-between items-center"
+        class="navbar bg-[#F85559] rounded-full flex justify-between  items-center"
       >
         <div class="hidden lg:flex">
           <ul
@@ -289,33 +349,33 @@
           </div>
 
           <div>
-            <div class="flex gap-5">
+            <div class="flex gap-5 font-black">
               <div>
                 <span class="countdown font-mono text-4xl">
-                  <span style="--value: 15"></span>
+                  <span style="--value:15;"></span>
                 </span>
                 days
-              </div>
+              </div> 
               <div>
                 <span class="countdown font-mono text-4xl">
-                  <span style="--value: 10"></span>
+                  <span style="--value:10;"></span>
                 </span>
                 hours
-              </div>
+              </div> 
               <div>
                 <span class="countdown font-mono text-4xl">
-                  <span style="--value: 24"></span>
+                  <span style="--value:24;"></span>
                 </span>
                 min
-              </div>
+              </div> 
               <div>
                 <span class="countdown font-mono text-4xl">
-                  <span style="--value: 55"></span>
+                  <span style="--value:2;"></span>
                 </span>
                 sec
               </div>
+            </div> 
             </div>
-          </div>
         </div>
 
         <!-- card part   -->
@@ -606,7 +666,7 @@
             Shop Now
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!-- team section -->
       <section class="md:container md:mx-auto mx-3 my-10 hidden">
