add my edited card section

--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
     </style>
   </head>
 
+  <!-- 1st card -->
   <div class="modal" id="modal-1">
     <div class="modal-box w-3/4 md:w-[300px] md:[400px] lg:w-[400px] lg:h-[400px]">
 
       <div class="flex justify-center py-3">
         <img class="" src="./images/fruit6.png" alt="" srcset="">
       </div>
-      <h3 class="font-extrabold text-lg lg:text-xl flex justify-center">Orange</h3>
+      <h3 class="font-extrabold text-lg lg:text-xl flex justify-center">Apples</h3>
       <p class="py-4 text-xs flex justify-center text-center">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
 
       <div class="rating rating-md rating-half flex justify-center">
@@ -113,6 +114,222 @@
       </div>
     </div>
   </div>
+
+  <!-- 2nd card -->
+  <div class="modal" id="modal-2">
+    <div class="modal-box w-3/4 md:w-[300px] md:[400px] lg:w-[400px] lg:h-[400px]">
+
+      <div class="flex justify-center py-3">
+        <img class="" src="./images/fruit7.png" alt="" srcset="">
+      </div>
+      <h3 class="font-extrabold text-lg lg:text-xl flex justify-center">Orange</h3>
+      <p class="py-4 text-xs flex justify-center text-center">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+      <div class="rating rating-md rating-half flex justify-center">
+        <input type="radio" name="rating-10" class="rating-hidden" />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+          checked
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+      </div>
+
+      <div class="modal-action flex justify-center">
+       <a href="#card-2" class="btn  btn-error rounded text-[#F85559] bg-white">Close</a>
+       <a href="#card-2" class="btn  btn-error rounded bg-[#F85559] border-none text-white">Buy Now</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- 3rd card -->
+  <div class="modal" id="modal-3">
+    <div class="modal-box w-3/4 md:w-[300px] md:[400px] lg:w-[400px] lg:h-[400px]">
+
+      <div class="flex justify-center py-3">
+        <img class="" src="./images/fruit8.png" alt="" srcset="">
+      </div>
+      <h3 class="font-extrabold text-lg lg:text-xl flex justify-center">Red Dragon</h3>
+      <p class="py-4 text-xs flex justify-center text-center">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+      <div class="rating rating-md rating-half flex justify-center">
+        <input type="radio" name="rating-10" class="rating-hidden" />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+          checked
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+      </div>
+
+      <div class="modal-action flex justify-center">
+       <a href="#card-3" class="btn  btn-error rounded text-[#F85559] bg-white">Close</a>
+       <a href="#card-3" class="btn  btn-error rounded bg-[#F85559] border-none text-white">Buy Now</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- 4th card -->
+  <div class="modal" id="modal-4">
+    <div class="modal-box w-3/4 md:w-[300px] md:[400px] lg:w-[400px] lg:h-[400px]">
+
+      <div class="flex justify-center py-3">
+        <img class="" src="./images/fruit9.png" alt="" srcset="">
+      </div>
+      <h3 class="font-extrabold text-lg lg:text-xl flex justify-center">Banana</h3>
+      <p class="py-4 text-xs flex justify-center text-center">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+      <div class="rating rating-md rating-half flex justify-center">
+        <input type="radio" name="rating-10" class="rating-hidden" />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+          checked
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-1"
+        />
+        <input
+          type="radio"
+          name="rating-10"
+          class="bg-[#F85559] mask mask-star-2 mask-half-2"
+        />
+      </div>
+
+      <div class="modal-action flex justify-center">
+       <a href="#card-4" class="btn  btn-error rounded text-[#F85559] bg-white">Close</a>
+       <a href="#card-4" class="btn  btn-error rounded bg-[#F85559] border-none text-white">Buy Now</a>
+      </div>
+    </div>
+  </div> 
 
   <body class="font-lato">
     <header class="md:container md:mx-auto mx-3 my-10">
@@ -517,6 +734,9 @@
                   class="bg-[#F85559] mask mask-star-2 mask-half-2"
                 />
               </div>
+
+              <a href="#modal-2" class="text-[#F85559]">Details</a>
+
             </div>
           </div>
 
@@ -586,10 +806,13 @@
                   class="bg-[#F85559] mask mask-star-2 mask-half-2"
                 />
               </div>
+
+              <a href="#modal-3" class="text-[#F85559]">Details</a>
             </div>
           </div>
 
-          <!-- 4th-card -->
+        
+          <!-- 4th card -->
           <div class="card bg-[##FFFFFF] rounded-lg border" id="card-4">
             <figure class="px-10 pt-10">
               <img src="./images/fruit9.png" alt="" class="rounded-xl" />
@@ -655,8 +878,12 @@
                   class="bg-[#F85559] mask mask-star-2 mask-half-2"
                 />
               </div>
+
+              <a href="#modal-4" class="text-[#F85559]">Details</a>
+
             </div>
           </div>
+
         </div>
 
         <div class="flex justify-center my-5">
@@ -666,7 +893,7 @@
             Shop Now
           </button>
         </div>
-      </section> -->
+      </section> 
 
       <!-- team section -->
       <section class="md:container md:mx-auto mx-3 my-10 hidden">
