add my edited footer section

--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
       <!-- banner section -->
 
       <div class="carousel w-full rounded-lg mt-10">
-        <div id="slide1" class="carousel-item relative w-full">
+        <div id="slide1" class="carousel-item relative w-full min-h-[320px] h-full lg:h-[520px]">
           <div
-            class="hero min-h-full"
+            class="hero w-full"
             style="background-image: url(./images/banner1.png)"
           >
             <div class="hero-overlay bg-black bg-opacity-50"></div>
@@ -434,9 +434,9 @@
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
         </div>
-        <div id="slide2" class="carousel-item relative w-full">
+        <div id="slide2" class="carousel-item relative w-full min-h-[320px] h-full lg:h-[520px]">
           <div
-            class="hero h-[600px]"
+            class="hero w-full"
             style="background-image: url(./images/banner2.png)"
           >
             <div class="hero-overlay bg-black bg-opacity-60"></div>
@@ -464,9 +464,9 @@
             <a href="#slide3" class="btn btn-circle">❯</a>
           </div>
         </div>
-        <div id="slide3" class="carousel-item relative w-full">
+        <div id="slide3" class="carousel-item relative w-full min-h-[320px] h-full lg:h-[520px]">
           <div
-            class="hero h-[600px]"
+            class="hero w-full"
             style="background-image: url(./images/banner3.png)"
           >
             <div class="hero-overlay bg-black bg-opacity-60"></div>
@@ -494,9 +494,9 @@
             <a href="#slide4" class="btn btn-circle">❯</a>
           </div>
         </div>
-        <div id="slide4" class="carousel-item relative w-full">
+        <div id="slide4" class="carousel-item relative w-full min-h-[320px] h-full lg:h-[520px]">
           <div
-            class="hero h-[600px]"
+            class="hero w-full"
             style="background-image: url(./images/banner4.png)"
           >
             <div class="hero-overlay bg-black bg-opacity-60"></div>
