add my edited main section

--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
     </main>
 
     <footer
-      class=" flex flex-col justify-center items-center  h-[300px] gap-y-8 -mt-4 bg-black "
+      class=" flex flex-col justify-center mt-16 items-center  h-[300px] gap-y-8  bg-black  "
     >
       <div class="flex justify-center items-center gap-2">
         <img class="w-10" src="./images/logo.png" alt="" srcset="" />
