--- a/index.html
+++ b/index.html
@@ -1144,12 +1144,12 @@
     <footer
       class=" flex flex-col justify-center mt-16 items-center  h-[300px] gap-y-8  bg-black  "
     >
-      <div class="flex justify-center items-center gap-2">
+      <div class="flex flex-wrap items-center gap-2">
         <img class="w-10" src="./images/logo.png" alt="" srcset="" />
         <h3 class="text-white text-3xl font-bold">Fruit Burst</h3>
       </div>
 
-      <div class="flex flex-wrap items-center  gap-5 text-white text-center gap-y-4 justify-center ">
+      <div class="flex flex-wrap items-center  gap-5 text-white text-center gap-y-4 gap-x-16 justify-center p-3 text-xs">
         <a class="link link-hover">Home</a>
         <a class="link link-hover">About Us</a>
         <a class="link link-hover">Shop</a>
